Tue Mar 14 12:37:29 USMST 2006  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/Registered_Data_Types.cpp:

          Changed the register_type() to use the_interface_repository_id
          comparison instead of  POA_TAO::DCPS::TypeSupport_ptr comparison.
          This would allow different TypeSupport instances of the same TypeSupport
          type register with the same type name in the same domain pariticipant. 
          The second (and subsequent) registrations are ignored.

        * tests/DCPS/MultiDPTest/subscriber.cpp:

          Added a test case that registers different TypeSupport instances of 
          the same TypeSupport type using the same type name in a domain
          participant.
                    
Mon Mar 13 14:50:00 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * tests/DCPS/MultiDPTest/subscriber.cpp:

          Added a type to the declaration of 'i'.

Tue Jan 24 13:54:33 USMST 2006  Yan Dai  <dai_y@ociweb.com>

        These changes fixes a bug in Registered_Data_Types that causes
        multiple domain participants within the same domain in a process
        can not register same data types. See RT8440.

        * dds/DCPS/Registered_Data_Types.cpp:
        * dds/DCPS/Registered_Data_Types.h:

          Made the DomainHash hash map use DomainParticipant object reference
          as the key instead of domain id. This would allow the data type
          be unique within a DomainParticipant and not within a domain.

        * bin/DCPS/CPPTemplate.pm:
        * dds/DCPS/DomainParticipantImpl.cpp:

          Updated the first argument to the
          Registered_Data_Types::register_type() call.

        * tests/DCPS/MultiDPTest/common.cpp:
        * tests/DCPS/MultiDPTest/common.h:
        * tests/DCPS/MultiDPTest/DataReaderListener.cpp:
        * tests/DCPS/MultiDPTest/DataReaderListener.h:
        * tests/DCPS/MultiDPTest/domain_ids:
        * tests/DCPS/MultiDPTest/MultiDPTest.mpc: